==================================================================
27/2-2017 EMWHBR

* R2A02

* Updated PID documentation with results from new experiments using
  "true" Ziegler-Nichols PID controller parameters.

* CMON
  - R2A02
  - Changed PID controller parameters using Ziegler-Nichols:
    Kp=211.76
    Ki= 12.10
    Kd=926.45

==================================================================
26/2-2017 EMWHBR

* R2A01

* Adaptions to new hardware platform.

* Updated hardware documentation (Kicad and LTSpice).

* New separate test application for hardware watchdog timer.

* CMON
  - R2A01
  - Added support for two external temperature sensors.
  - Added support for hardware watchdog timer.
  - Radiator is now controlled by SSR.
  - PID control sample time changed from 600s to 60s.
  - Fallback PWM period time changed from 600s to 60s.
  - Changed default set temperature to 19.0 degC.
  - Changed max allowed set temperature to 20.0 degC.
  - Controller data now includes statistics for set value and duty.
  - Improved error handling for faulty climate sensors.
  - Updated system files.

==================================================================
20/1-2017 EMWHBR

* R1A

* Baseline for further development.

* CMON
  - R1A
  - Updated revision (R-state) information.

==================================================================
30/1-2016 EMWHBR

* R1A06

* SD card image: 20160130_caramon_r1a06_raspbian.img.bz2

* CMON
  - R1A04
  - Changed default set temperature to 9.0 degC.

==================================================================
28/1-2016 EMWHBR

* R1A05

* CMON
  - R1A03
  - New fallback mode that will be activated when to many errors.
    Data logging disabled and with minimum functionality.
    Temperature is controlled by fixed rate PWM with no feedback.
  - Changed encapsulation of power switch control.

==================================================================
26/1-2016 EMWHBR

* R1A04

* CMON
  - R1A02