@@ -16,6 +16,6 @@
 //               Definitions of macros
 /////////////////////////////////////////////////////////////////////////////
 #define CMON_PRODUCT_NUMBER "CMON"
-#define CMON_RSTATE         "R2A02"
+#define CMON_RSTATE         "R2A03"
 
 #endif // __CMON_PRODUCT_INFO_H__
