@@ -1,4 +1,14 @@
 ==================================================================
+1/3-2017 EMWHBR
+
+* R2A03
+
+* CMON
+  - R2A03
+  - Using new curl command syntax for updating Thingspeak channel.
+    Old command sometimes resulted in channel not being updated.
+
+==================================================================
 27/2-2017 EMWHBR
 
 * R2A02
